syntax = "proto3";

option java_multiple_files = true;
option java_package = "smartcityconnect2";
option java_outer_classname = "NamingServiceNew";

package smartcityconnect2;

service NamingService {
  rpc RegisterService (ServiceInfo) returns (RegistrationResponse);
  rpc DiscoverService (ServiceQuery) returns (ServiceInfo);
}

message ServiceInfo {
  string serviceName = 1;
  string host = 2;
  int32 port = 3;
}

message RegistrationResponse {
  bool success = 1;
}

message ServiceQuery {
  string serviceName = 1;
}
